// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormPreview it renders empty schema 1`] = `
<DocumentFragment>
  <div
    class="mr-2"
  />
</DocumentFragment>
`;

exports[`FormPreview it renders markdown in description 1`] = `
<DocumentFragment>
  <div
    class="mr-2"
  >
    <div
      class="root form-group"
    >
      <div
        class="my-1"
        id="root__title"
      >
        <h5>
          A form
        </h5>
        <hr
          class="border-0 bg-secondary"
          style="height: 1px;"
        />
      </div>
      <div
        class="mb-3"
        id="root__description"
      >
        <div>
          <p>
            <em>
              Form description
            </em>
          </p>
          

        </div>
      </div>
      <div
        class="p-0 container-fluid"
      >
        <div
          class="row"
          style="margin-bottom: 10px;"
        >
          <div
            class="col-12"
          >
             
            <div
              class="root isActive form-group"
            >
              <label
                class="form-label"
                for="root_firstName"
              >
                First name
              </label>
              <input
                aria-describedby="root_firstName__error root_firstName__description root_firstName__help"
                class="form-control"
                id="root_firstName"
                name="root_firstName"
                placeholder=""
                type="text"
                value=""
              />
              <div
                class="field-description mt-1 text-muted"
              >
                <div>
                  <p>
                    <a
                      href="https://example.com"
                    >
                      link
                    </a>
                     in 
                    <strong>
                      description
                    </strong>
                  </p>
                  

                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormPreview it renders simple schema 1`] = `
<DocumentFragment>
  <div
    class="mr-2"
  >
    <div
      class="root form-group"
    >
      <div
        class="my-1"
        id="root__title"
      >
        <h5>
          A form
        </h5>
        <hr
          class="border-0 bg-secondary"
          style="height: 1px;"
        />
      </div>
      <div
        class="mb-3"
        id="root__description"
      >
        <div>
          <p>
            A form example.
          </p>
          

        </div>
      </div>
      <div
        class="p-0 container-fluid"
      >
        <div
          class="row"
          style="margin-bottom: 10px;"
        >
          <div
            class="col-12"
          >
             
            <div
              class="root isActive form-group"
            >
              <label
                class="form-label"
                for="root_firstName"
              >
                First name
              </label>
              <input
                aria-describedby="root_firstName__error root_firstName__description root_firstName__help"
                class="form-control"
                id="root_firstName"
                name="root_firstName"
                placeholder=""
                type="text"
                value="Chuck"
              />
            </div>
          </div>
        </div>
        <div
          class="row"
          style="margin-bottom: 10px;"
        >
          <div
            class="col-12"
          >
             
            <div
              class="root form-group"
            >
              <label
                class="form-label"
                for="root_age"
              >
                Age
              </label>
              <input
                aria-describedby="root_age__error root_age__description root_age__help"
                class="form-control"
                id="root_age"
                inputmode="numeric"
                name="root_age"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="row"
          style="margin-bottom: 10px;"
        >
          <div
            class="col-12"
          >
             
            <div
              class="root form-group"
            >
              <label
                class="form-label"
                for="root_telephone"
              >
                Telephone
              </label>
              <input
                aria-describedby="root_telephone__error root_telephone__description root_telephone__help"
                class="form-control"
                id="root_telephone"
                name="root_telephone"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
